WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283963
[XR] Fix a typo in a PlatformXR variable name
https://bugs.webkit.org/show_bug.cgi?id=283963
Summary
[XR] Fix a typo in a PlatformXR variable name
Claudio Saavedra
Reported
2024-12-03 03:08:18 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2024-12-03 03:11:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37365
EWS
Comment 2
2024-12-03 06:45:02 PST
Committed
287276@main
(3a09ab3a98f4): <
https://commits.webkit.org/287276@main
> Reviewed commits have been landed. Closing PR #37365 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-12-03 06:46:15 PST
<
rdar://problem/140851350
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug