[XR] Fix a typo in a PlatformXR variable name https://bugs.webkit.org/show_bug.cgi?id=283963

Reviewed by Adrian Perez de Castro.

s/handeness/handedness

* Source/WebCore/Modules/webxr/WebXRInputSource.cpp:
(WebCore::WebXRInputSource::requiresInputSourceChange):
* Source/WebCore/Modules/webxr/WebXRInputSource.h:
(WebCore::WebXRInputSource::handedness const):
* Source/WebCore/platform/xr/PlatformXR.h:
* Source/WebCore/platform/xr/openxr/OpenXRInput.cpp:
(PlatformXR::OpenXRInput::initialize):
* Source/WebCore/platform/xr/openxr/OpenXRInputSource.cpp:
(PlatformXR::OpenXRInputSource::create):
(PlatformXR::OpenXRInputSource::OpenXRInputSource):
(PlatformXR::OpenXRInputSource::initialize):
(PlatformXR::OpenXRInputSource::suggestBindings const):
(PlatformXR::OpenXRInputSource::getInputSource const):
* Source/WebCore/platform/xr/openxr/OpenXRInputSource.h:
* Source/WebCore/platform/xr/openxr/OpenXRUtils.h:
(PlatformXR::handednessToString):
(PlatformXR::handenessToString): Deleted.
* Source/WebCore/testing/WebFakeXRInputController.cpp:
(WebCore::WebFakeXRInputController::WebFakeXRInputController):
(WebCore::WebFakeXRInputController::getFrameData):
* Source/WebCore/testing/WebFakeXRInputController.h:
* Source/WebKit/Shared/XR/PlatformXR.serialization.in:
* Source/WebKit/UIProcess/XR/ios/WKARPresentationSession.mm:
(-[_WKTransientGestureRecognizer _platformXRInputSourceFromTransientAction:actionIdentifier:]):

Canonical link: https://commits.webkit.org/287276@main