Source/WebCore/Modules/webxr/WebXRInputSource.h
@@ -63,7 +63,7 @@ public:
     ~WebXRInputSource();
 
     PlatformXR::InputSourceHandle handle() const { return m_source.handle; }
-    XRHandedness handedness() const { return m_source.handeness; }
+    XRHandedness handedness() const { return m_source.handedness; }
     XRTargetRayMode targetRayMode() const { return m_source.targetRayMode; };
     const WebXRSpace& targetRaySpace() const {return m_targetRaySpace.get(); };
     WebXRSpace* gripSpace() const { return m_gripSpace.get(); }
